--- a/signup.html
+++ b/signup.html
@@ -4,86 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup</title>
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <link rel="stylesheet" href="./CSS/singup.css">
+    <link rel="icon" href="./icon/Untitled-2 (3).png">
 
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, Helvetica, sans-serif;
-            /* background-color: rgb(49, 69, 34); */
-            /* background-image: url("./icon/photo-1434030216411-0b793f4b4173.avif"); */
-            background-image: url("./icon/photo-1486312338219-ce68d2c6f44d.avif");
-            background-size: cover;
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            width: 30%;
-            height: 50vh;
-            background-color: white;
-            margin: 130px auto;
-            padding: 35px;
-            box-shadow: 5px 3px 8px #888888;
-        }
-       form {
-            display: flex;
-            flex-direction: column;
-       }
-        input[type=email], input[type=password], input[type=text] {
-            width: 100%;
-            padding: 12px 20px;
-            margin: 8px 0;
-            display: inline-block;
-            border: 1px solid #ccc;
-            box-sizing: border-box;
-        }
-        button {
-            background-color: #24422F;
-            color: white;
-            padding: 14px 20px;
-            margin: 8px 0;
-            border: none;
-            cursor: pointer;
-            width: 100%;
-        }
-        button:hover {
-            opacity: 0.8;
-        }
-        h3 {
-            text-align: center;
-            color: #023f28;
-        }
-        /* .cc{
-            width: 100%;
-            height: 100vh;
-            background-color: rgba(2, 63, 40,0.2);
-        }
-        */
-    
-
-    </style>
+     <title>Signup</title>
 </head>
 <body>
 
         <div class="container">
             
             <h3>CREATE ACCOUNT</h3>
-            <form>
-
-                <input type="text" placeholder="User name">
-                <input type="email" placeholder="Enter email">
-                <input type="password" placeholder="Enter password">
-                <input type="password" placeholder="Repeat your password">
+            <div id="display-image"></div>
+            <input type="file" id="image-input"  accept="image/jpeg, image/png, image/jpg">
+            <form id="form">
+                <input type="text" id="username" placeholder="User name" >
+                <p class="error" id="errName"></p>
+                <input type="email" id="email" placeholder="Enter email">
+                <p class="error" id="errEmail"></p>
+                <input type="text" id="phone" placeholder="Enter Phone">
+                <p class="error" id="errphon"></p>
+                <input type="password" id="password" placeholder="Enter password">
+                <input type="password" id="repssword" placeholder="Repeat your password">
+                <p class="error" id="match"></p>
                 <button type="submit">Sign Up</button>
-
 
             </form>
 
     </div>
-
-
+    <script src="./JS/signup.js"></script>
 </body>
 </html>
