--- a/trainer.html
+++ b/trainer.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/trainer.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/782baa506c.js" crossorigin="anonymous"></script>	
+    <link rel="icon" href="./icon/Untitled-2 (3).png">
+
     <title>Trainer</title>
 
 </head>
